--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
@@ -42,8 +42,8 @@
 
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#globalNav" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+        <span class="navbar-toggler-icon"></span>
+      </button>
             <div class="break"></div>
             <div class="collapse navbar-collapse ms-auto" id="globalNav">
                 <ul class="navbar-nav ms-auto ">
@@ -70,24 +70,30 @@
     <main>
         <!-- turn into bootstrap tabs-->
         <nav class="navbar navbar-expand-sm navbar-light .bg-transparent sticky-top">
-            <ul class="navbar-nav ms-auto me-md-5 me-sm-2 ms-sm-2 ">
+            <ul class="navbar-nav ms-5 me-5 me-md-5 me-sm-2 ms-sm-2 ">
                 <li class="nav-item  me-md-3 ">
                     <a class="nav-link" href="#top">Top</a>
                 </li>
                 <li class="nav-item  me-md-3">
-                    <a class="nav-link" href="#">Whats Inside</a>
+                    <a class="nav-link" href="#bookInfo">Synopsis</a>
                 </li>
                 <li class="nav-item  me-md-3">
-                    <a class="nav-link" href="#">About the Author</a>
+                    <a class="nav-link" href="#bookInfo">Product Details</a>
+                </li>
+                <li class="nav-item  me-md-3">
+                    <a class="nav-link" href="#bookInfo">Media Reactions</a>
+                </li>
+                <li class="nav-item  me-md-3">
+                    <a class="nav-link" href="#bookInfo">Author Information</a>
                 </li>
                 <li class="nav-item me-md-3 ">
-                    <a class="nav-link" href="#">Excerpt</a>
+                    <a class="nav-link" href="#bookInfo">Excerpt</a>
                 </li>
                 <li class="nav-item me-md-3 ">
-                    <a class="nav-link" href="#">Reviews</a>
+                    <a class="nav-link" href="#reviews">Reviews</a>
                 </li>
             </ul>
-            <button class="me-md-2 btn btn-primary btn-lg btn-outline-primary text-primary my-2 my-sm-0  fw-bold bg-light bg-opacity-50 buyNowButton" type="submit">Buy Now</button>
+            <button class="ms-auto me-md-2 btn btn-primary btn-lg btn-outline-primary text-primary my-2 my-sm-0  fw-bold bg-light bg-opacity-50 buyNowButton" type="submit">Buy Now</button>
         </nav>
         <section class="mainContent">
             <section id="about">
@@ -128,52 +134,99 @@
 
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
                     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
                 </div>
+
                 <article>
                     <div>
                         <h2>Fairy Tale</h2>
                         <h4>By: <a href="https://stephenking.com">Stephen King</a></h4>
-                        <h4>List Price: $32.50</h4>
+                        <h4>MSRP: $32.50</h4>
                     </div>
+                    <aside class="buyLinks">
+                        <section id="hardCover">
+                            <a><img src="./img/svg/Amazonlogo.svg" alt=""></a>
+                            <a><img src="./img/svg/BarnesandNoblelogo.svg" alt=""></a>
+                            <a><img src="./img/svg/BooksaMillionlogo.svg" alt=""></a>
+                            <a><img src="./img/svg/Bookshoplogo.svg" alt=""></a>
+                            <a><img src="./img/svg/IndieBoundlogo.svg" alt=""></a>
+                        </section>
+                        <section id="ebook">
+                            <a><img src="./img/svg/Amazon Kindle logo.svg"></a>
+                            <a><img src="./img/svg/AppleBookslogo.svg"></a>
+                            <a><img src="./img/svg/BarnesandNoblelogo.svg" alt=""></a>
+                            <a><img src="./img/svg/BooksaMillionlogo.svg" alt=""></a>
+                            <a><img src="./img/svg/GooglePlaylogo.svg" alt=""></a>
+                            <a><img src="./img/svg/RakutenKobologo.svg" alt=""></a>
+                        </section>
+                    </aside>
                     <figure class="container">
                         <figcaption>About the book</figcaption>
                         <p>Legendary storyteller Stephen King goes into the deepest well of his imagination in this spellbinding novel about a seventeen-year-old boy who inherits the keys to a parallel world where good and evil are at war, and the stakes
                             could not be higher—for their world or ours.</p>
                         <p>King’s storytelling in Fairy Tale soars. This is a magnificent and terrifying tale about another world than ours, in which good is pitted against overwhelming evil, and a heroic boy – and his dog – must lead the battle.</p>
+                        <br />
+                        <p>Early in the Pandemic, King asked himself: “What could you write that would make you happy?”</p>
+                        <p>“As if my imagination had been waiting for the question to be asked, I saw a vast deserted city—deserted but alive. I saw the empty streets, the haunted buildings, a gargoyle head lying overturned in the street. I saw smashed statues
+                            (of what I didn’t know, but I eventually found out). I saw a huge, sprawling palace with glass towers so high their tips pierced the clouds. Those images released the story I wanted to tell.”</p>
                     </figure>
                 </article>
+
                 <figure class="container">
-                    <figcaption>Synopsis</figcaption>
+                    <figcaption>About the book</figcaption>
                     <p>Legendary storyteller Stephen King goes into the deepest well of his imagination in this spellbinding novel about a seventeen-year-old boy who inherits the keys to a parallel world where good and evil are at war, and the stakes could
                         not be higher—for their world or ours.</p>
-                    <p>King’s storytelling in Fairy Tale soars. This is a magnificent and terrifying tale about another world than ours, in which good is pitted against overwhelming evil, and a heroic boy – and his dog – must lead the battle.</p>
+                    <p>King’s storytelling in Fairy Tale soars. This is a magnificent and terrifying tale about another world than ours, in which good is pitted against overwhelming evil, and a heroic boy – and his dog – must lead the battle.
+                    </p><br />
+                    <p>Early in the Pandemic, King asked himself: “What could you write that would make you happy?”</p>
+                    <p>“As if my imagination had been waiting for the question to be asked, I saw a vast deserted city—deserted but alive. I saw the empty streets, the haunted buildings, a gargoyle head lying overturned in the street. I saw smashed statues
+                        (of what I didn’t know, but I eventually found out). I saw a huge, sprawling palace with glass towers so high their tips pierced the clouds. Those images released the story I wanted to tell.”</p>
                 </figure>
+
+                <aside class="buyLinks">
+
+                    <section id="hardCover">
+                        <a href=""><img src="./img/svg/Amazonlogo.svg" alt=""></a>
+                        <a href=""><img src="./img/svg/BarnesandNoblelogo.svg" alt=""></a>
+                        <a href=""><img src="./img/svg/BooksaMillionlogo.svg" alt=""></a>
+                        <a href=""><img src="./img/svg/Bookshoplogo.svg" alt=""></a>
+                        <a href=""><img src="./img/svg/IndieBoundlogo.svg" alt=""></a>
+                    </section>
+                    <section id="ebook">
+                        <a href=""><img src="./img/svg/Amazon Kindle logo.svg"></a>
+                        <a href=""><img src="./img/svg/AppleBookslogo.svg"></a>
+                        <a href=""><img src="./img/svg/BarnesandNoblelogo.svg" alt=""></a>
+                        <a href=""><img src="./img/svg/BooksaMillionlogo.svg" alt=""></a>
+                        <a href=""><img src="./img/svg/GooglePlaylogo.svg" alt=""></a>
+                        <a href=""><img src="./img/svg/RakutenKobologo.svg" alt=""></a>
+                    </section>
+                </aside>
             </section>
             <section id="bookInfo" class="row">
                 <section>
                     <nav>
                         <div class="nav nav-tabs nav-justified" id="nav-tab" role="tablist">
 
-                            <button class="nav-link active" id="aboutBookButton" data-bs-toggle="pill" data-bs-target="#aboutBook" type="button" role="tab" aria-controls="aboutBook" aria-selected="true">Synopsis</button>
+                            <button class="nav-link active" id="aboutBookButton" data-bs-toggle="pill" data-bs-target="#synopsis" type="button" role="tab" aria-controls="aboutBook" aria-selected="true">Synopsis</button>
 
                             <button class="nav-link" id="mediaReactionsButton" data-bs-toggle="pill" data-bs-target="#mediaReactions" type="button" role="tab" aria-controls="mediaReactions" aria-selected="false">Media Reactions</button>
 
                             <button class="nav-link" id="excerptButton" data-bs-toggle="pill" data-bs-target="#excerpt" type="button" role="tab" aria-controls="excerpt" aria-selected="false">Excerpt</button>
 
                             <button class="nav-link" id="productDetailsButton" data-bs-toggle="pill" data-bs-target="#productDetails" type="button" role="tab" aria-controls="productDetails" aria-selected="false">Product Details</button>
+                            <button class="nav-link" id="authorButton" data-bs-toggle="pill" data-bs-target="#authorInformation" type="button" role="tab" aria-controls="authorInformation" aria-selected="false">Author Information</button>
                         </div>
                     </nav>
 
-                    <div class="tab-content" id="v-pills-tabContent">
+                    <div class="tab-content" id="tabContent">
 
-                        <div class="tab-pane fade show active" id="aboutBook" role="tabpanel" aria-labelledby="aboutBookButton">
+                        <div class="tab-pane fade active show" id="synopsis" role="tabpanel" aria-labelledby="aboutBookButton">
                             <p>Charlie Reade looks like a regular high school kid, great at baseball and football, a decent student. But he carries a heavy load. His mom was killed in a hit-and-run accident when he was seven, and grief drove his dad to drink.
                                 Charlie learned how to take care of himself—and his dad. When Charlie is seventeen, he meets a dog named Radar and her aging master, Howard Bowditch, a recluse in a big house at the top of a big hill, with a locked shed
                                 in the backyard. Sometimes strange sounds emerge from it.</p>
@@ -184,15 +237,68 @@
 
                         </div>
                         <div class="tab-pane fade" id="excerpt" role="tabpanel" aria-labelledby="excerptButton">...</div>
-                        <div class="tab-pane fade" id="productDetails" role="tabpanel" aria-labelledby="productDetailsButton">...</div>
+                        <div class="tab-pane fade" id="productDetails" role="tabpanel" aria-labelledby="productDetailsButton">
+                            <div>
+                                <p>Publisher: Scribner </p>
+                                <p>Publish Date: September 6, 2022</p>
+                                <p>Rating: <span id="rating"></span></p>
+                                <p>Length: 608 pages</p>
+                                <p>Available Format(s): Hardcover / eBook</p>
+                            </div>
+                            <div>
+                                <p>ISBN-13: 9781668002179</p>
+                                <p>ISBN-10: 1668002175</p>
+                                <p>Language: English</p>
+
+                                <p> Item weight: Hardcover(816g) </p>
+                                <p> Dimensions: 15.56 x 4.83 x 23.5 cm </p>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="authorInformation" role="tabpanel" aria-labelledby="authorButton">
+                            <section>
+                                <h3>Stephen King</h3>
+                                <!-- Replace With carousel-->
+                                <img src="img/author5.jpg">
+                            </section>
+                            <section>
+                                <p><b>Born in:</b> Portland, Maine, USA</p>
+                                <p><b>Website:</b> <a href="http://www.stephenking.com">http://www.stephenking.com</a></p>
+
+                                <ul>
+                                    <h5>genres:</h5>
+                                    <li>Horror</li>
+                                    <li>Mystery</li>
+                                    <li>Literature</li>
+                                    <li>Fiction</li>
+                                </ul>
+
+
+                                <ul>
+                                    <h5>Influences: </h5>
+                                    <li>Robert Bloch,</li>
+                                    <li>Ray Bradbury,</li>
+                                    <li>Charles Dickens,</li>
+                                    <li>Shirley Jackson,</li>
+                                    <li>H.P. Lovecraft,</li>
+                                    <li>John D. MacDonald,</li>
+                                    <li>Richard Matheson,</li>
+                                    <li>J.R.R. Tolkien</li>
+                                </ul>
+
+                            </section>
+                            <section>
+                                <div class="accordion container" id="authorAcordion">
+
+                                </div>
+                            </section>
+                        </div>
+
                     </div>
                 </section>
-                <section id="authorInfo">
-                    <p>author Info</p>
-                </section>
+
 
             </section>
-            <section class="">
+            <section id="reviews">
 
 
                 <div class="accordion" id="bottomSection">
