excerpt, mediaReactions, layout,
most things are how I want them now
-finished excerpt data
- finished mediaReactions
worked more on the layout and breakpoints

--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
@@ -236,7 +236,23 @@
                         <div class="tab-pane fade" id="mediaReactions" role="tabpanel" aria-labelledby="mediaReactionsButton">
 
                         </div>
-                        <div class="tab-pane fade" id="excerpt" role="tabpanel" aria-labelledby="excerptButton">...</div>
+
+                        <div class="tab-pane fade" id="excerpt" role="tabpanel" aria-labelledby="excerptButton">
+                            <div class="d-flex align-items-start">
+                                <div class="nav flex-column nav-pills me-3" id="tabButtonsExcerpt" role="tablist" aria-orientation="vertical">
+                                    <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Title</button>
+                                </div>
+                                <div class="tab-content" id="tabContentExcerpt">
+                                    <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
+                                        <h2><u>Chapter One</u></h2>
+                                        <h3>The Goddam Bridge. The Miracle. The Howling. </h3>
+                                    </div>
+
+                                </div>
+                            </div>
+
+
+                        </div>
                         <div class="tab-pane fade" id="productDetails" role="tabpanel" aria-labelledby="productDetailsButton">
                             <div>
                                 <p>Publisher: Scribner </p>
@@ -263,18 +279,18 @@
                             <section>
                                 <p><b>Born in:</b> Portland, Maine, USA</p>
                                 <p><b>Website:</b> <a href="http://www.stephenking.com">http://www.stephenking.com</a></p>
-
+                                <h5><u>genres:</u></h5>
                                 <ul>
-                                    <h5>genres:</h5>
+
                                     <li>Horror</li>
                                     <li>Mystery</li>
                                     <li>Literature</li>
                                     <li>Fiction</li>
                                 </ul>
 
-
+                                <h5><u>Influences</u> </h5>
                                 <ul>
-                                    <h5>Influences: </h5>
+
                                     <li>Robert Bloch,</li>
                                     <li>Ray Bradbury,</li>
                                     <li>Charles Dickens,</li>
