--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
@@ -150,20 +150,24 @@
                         <h4>MSRP: $32.50</h4>
                     </div>
                     <aside class="buyLinks">
+                        <select id="topSelect">
+                         <option value="hardCover">Hard Cover</option>
+                    <option value="ebook">E-book</option>
+                      </select>
                         <section id="hardCover">
-                            <a><img src="./img/svg/Amazonlogo.svg" alt=""></a>
-                            <a><img src="./img/svg/BarnesandNoblelogo.svg" alt=""></a>
-                            <a><img src="./img/svg/BooksaMillionlogo.svg" alt=""></a>
-                            <a><img src="./img/svg/Bookshoplogo.svg" alt=""></a>
-                            <a><img src="./img/svg/IndieBoundlogo.svg" alt=""></a>
+                            <a href="https://www.amazon.com/exec/obidos/ASIN/1668002175?tag=simonsayscom"><img src="./img/svg/Amazonlogo.svg" alt=""></a>
+                            <a href="https://www.anrdoezrs.net/click-7567305-11819508?SID=simonsayscom&url=http://www.barnesandnoble.com/w/?ean=9781668002179"><img src="./img/svg/BarnesandNoblelogo.svg" alt=""></a>
+                            <a href="https://www.booksamillion.com/p/9781668002179"><img src="./img/svg/BooksaMillionlogo.svg" alt=""></a>
+                            <a href="https://bookshop.org/a/1688/9781668002179"><img src="./img/svg/Bookshoplogo.svg" alt=""></a>
+                            <a href="https://www.indiebound.org/book/9781668002179?aff=simonsayscom"><img src="./img/svg/IndieBoundlogo.svg" alt=""></a>
                         </section>
                         <section id="ebook">
-                            <a><img src="./img/svg/Amazon Kindle logo.svg"></a>
-                            <a><img src="./img/svg/AppleBookslogo.svg"></a>
-                            <a><img src="./img/svg/BarnesandNoblelogo.svg" alt=""></a>
-                            <a><img src="./img/svg/BooksaMillionlogo.svg" alt=""></a>
-                            <a><img src="./img/svg/GooglePlaylogo.svg" alt=""></a>
-                            <a><img src="./img/svg/RakutenKobologo.svg" alt=""></a>
+                            <a href="http://www.amazon.com/gp/product/B09QXZB6SK?ie=UTF8&camp=1789&creativeASIN=B09QXZB6SK&linkCode=xm2&tag=simonsayscom"><img src="./img/svg/Amazon Kindle logo.svg"></a>
+                            <a href="http://books.apple.com/us/book/isbn9781668002186?at=101rBC&ct=fairytale_9781668002186_sscom"><img src="./img/svg/AppleBookslogo.svg"></a>
+                            <a href="http://www.anrdoezrs.net/click-7567305-11819508?SID=simonsayscom&url=http://www.barnesandnoble.com/w/?ean=9781668002186"><img src="./img/svg/BarnesandNoblelogo.svg" alt=""></a>
+                            <a href="http://www.booksamillion.com/p/9781668002186"><img src="./img/svg/BooksaMillionlogo.svg" alt=""></a>
+                            <a href="https://play.google.com/store/search?q=9781668002186&c=books&PCamRefID=fairytale_9781668002186_sscom&PAffiliateId=110l3H"><img src="./img/svg/GooglePlaylogo.svg" alt=""></a>
+                            <a href="http://www.kobobooks.com/search/search.html?q=9781668002186"><img src="./img/svg/RakutenKobologo.svg" alt=""></a>
                         </section>
                     </aside>
                     <figure class="container">
@@ -190,21 +194,25 @@
                 </figure>
 
                 <aside class="buyLinks">
-
+                    <select id="bottomSelect">
+                       
+                         <option value="hardCover" >Hard Cover</option>
+                   <option value="ebook">E-book</option>
+                      </select>
                     <section id="hardCover">
-                        <a href=""><img src="./img/svg/Amazonlogo.svg" alt=""></a>
-                        <a href=""><img src="./img/svg/BarnesandNoblelogo.svg" alt=""></a>
-                        <a href=""><img src="./img/svg/BooksaMillionlogo.svg" alt=""></a>
-                        <a href=""><img src="./img/svg/Bookshoplogo.svg" alt=""></a>
-                        <a href=""><img src="./img/svg/IndieBoundlogo.svg" alt=""></a>
+                        <a href="https://www.amazon.com/exec/obidos/ASIN/1668002175?tag=simonsayscom"><img src="./img/svg/Amazonlogo.svg" alt=""></a>
+                        <a href="https://www.anrdoezrs.net/click-7567305-11819508?SID=simonsayscom&url=http://www.barnesandnoble.com/w/?ean=9781668002179"><img src="./img/svg/BarnesandNoblelogo.svg" alt=""></a>
+                        <a href="https://www.booksamillion.com/p/9781668002179"><img src="./img/svg/BooksaMillionlogo.svg" alt=""></a>
+                        <a href="https://bookshop.org/a/1688/9781668002179"><img src="./img/svg/Bookshoplogo.svg" alt=""></a>
+                        <a href="https://www.indiebound.org/book/9781668002179?aff=simonsayscom"><img src="./img/svg/IndieBoundlogo.svg" alt=""></a>
                     </section>
                     <section id="ebook">
-                        <a href=""><img src="./img/svg/Amazon Kindle logo.svg"></a>
-                        <a href=""><img src="./img/svg/AppleBookslogo.svg"></a>
-                        <a href=""><img src="./img/svg/BarnesandNoblelogo.svg" alt=""></a>
-                        <a href=""><img src="./img/svg/BooksaMillionlogo.svg" alt=""></a>
-                        <a href=""><img src="./img/svg/GooglePlaylogo.svg" alt=""></a>
-                        <a href=""><img src="./img/svg/RakutenKobologo.svg" alt=""></a>
+                        <a href="http://www.amazon.com/gp/product/B09QXZB6SK?ie=UTF8&camp=1789&creativeASIN=B09QXZB6SK&linkCode=xm2&tag=simonsayscom"><img src="./img/svg/Amazon Kindle logo.svg"></a>
+                        <a href="http://books.apple.com/us/book/isbn9781668002186?at=101rBC&ct=fairytale_9781668002186_sscom"><img src="./img/svg/AppleBookslogo.svg"></a>
+                        <a href="http://www.anrdoezrs.net/click-7567305-11819508?SID=simonsayscom&url=http://www.barnesandnoble.com/w/?ean=9781668002186"><img src="./img/svg/BarnesandNoblelogo.svg" alt=""></a>
+                        <a href="http://www.booksamillion.com/p/9781668002186"><img src="./img/svg/BooksaMillionlogo.svg" alt=""></a>
+                        <a href="https://play.google.com/store/search?q=9781668002186&c=books&PCamRefID=fairytale_9781668002186_sscom&PAffiliateId=110l3H"><img src="./img/svg/GooglePlaylogo.svg" alt=""></a>
+                        <a href="http://www.kobobooks.com/search/search.html?q=9781668002186"><img src="./img/svg/RakutenKobologo.svg" alt=""></a>
                     </section>
                 </aside>
             </section>
