authorPhoto into Acordion
changed the img in autor details to be a carousel of imgs and re-styled it.

-- cant think of much more to modify

--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
@@ -282,7 +282,44 @@
                             <section>
                                 <h3>Stephen King</h3>
                                 <!-- Replace With carousel-->
-                                <img src="img/author5.jpg">
+
+
+
+
+
+
+
+                                <div id="authorCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item active">
+                                            <img src="./img/author1.jpg" class="d-block w-100" alt="...">
+                                        </div>
+                                        <div class="carousel-item active">
+                                            <img src="./img/author2.jpg" class="d-block w-100" alt="...">
+                                        </div>
+
+                                        <div class="carousel-item active">
+                                            <img src="./img/author4.jpg" class="d-block w-100" alt="...">
+                                        </div>
+                                        <div class="carousel-item active">
+                                            <img src="./img/author5.jpg" class="d-block w-100" alt="...">
+                                        </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#authorCarousel" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                  </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#authorCarousel" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                  </button>
+                                </div>
+
+
+
+
+
+
                             </section>
                             <section>
                                 <p><b>Born in:</b> Portland, Maine, USA</p>
