--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
@@ -324,28 +324,28 @@
                             <section>
                                 <p><b>Born in:</b> Portland, Maine, USA</p>
                                 <p><b>Website:</b> <a href="http://www.stephenking.com">http://www.stephenking.com</a></p>
-                                <h5><u>genres:</u></h5>
-                                <ul>
-
-                                    <li>Horror</li>
-                                    <li>Mystery</li>
-                                    <li>Literature</li>
-                                    <li>Fiction</li>
-                                </ul>
-
-                                <h5><u>Influences</u> </h5>
-                                <ul>
-
-                                    <li>Robert Bloch,</li>
-                                    <li>Ray Bradbury,</li>
-                                    <li>Charles Dickens,</li>
-                                    <li>Shirley Jackson,</li>
-                                    <li>H.P. Lovecraft,</li>
-                                    <li>John D. MacDonald,</li>
-                                    <li>Richard Matheson,</li>
-                                    <li>J.R.R. Tolkien</li>
-                                </ul>
-
+                                <div>
+                                    <h5><u>genres:</u></h5>
+                                    <ul>
+                                        <li>Horror</li>
+                                        <li>Mystery</li>
+                                        <li>Literature</li>
+                                        <li>Fiction</li>
+                                    </ul>
+                                </div>
+                                <div>
+                                    <h5><u>Influences</u> </h5>
+                                    <ul>
+                                        <li>Robert Bloch,</li>
+                                        <li>Ray Bradbury,</li>
+                                        <li>Charles Dickens,</li>
+                                        <li>Shirley Jackson,</li>
+                                        <li>H.P. Lovecraft,</li>
+                                        <li>John D. MacDonald,</li>
+                                        <li>Richard Matheson,</li>
+                                        <li>J.R.R. Tolkien</li>
+                                    </ul>
+                                </div>
                             </section>
                             <section>
                                 <div class="accordion container" id="authorAcordion">
