exceprt update + other stuff
-made the excerpt look more like a book/ledgible
-random layout stuff
-resized buyLinks at large breakpoint

--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
@@ -93,7 +93,7 @@
                     <a class="nav-link" href="#reviews">Reviews</a>
                 </li>
             </ul>
-            <button class="ms-auto me-md-2 btn btn-primary btn-lg btn-outline-primary text-primary my-2 my-sm-0  fw-bold bg-light bg-opacity-50 buyNowButton" type="submit">Buy Now</button>
+            <button class="ms-auto me-md-2 btn btn-primary btn-lg btn-outline-primary text-primary my-2 my-sm-0  fw-bold bg-light bg-opacity-50 buyNowButton" type="button">Buy Now</button>
         </nav>
         <section class="mainContent">
             <section id="about">
@@ -251,6 +251,7 @@
                                     <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Title</button>
                                 </div>
                                 <div class="tab-content" id="tabContentExcerpt">
+                                    <div class="corner-fold"></div>
                                     <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
                                         <h2><u>Chapter One</u></h2>
                                         <h3>The Goddam Bridge. The Miracle. The Howling. </h3>
